[workspace]
members = [
    "blockchain-source",
    "cardano-utils",
    "core",
    "deps",
    "fraos",
    "indexed-log-map",
    "multiverse",
    "utxo-selection",
    "utxo-selection-benchmark",
    "cardano-cli-tools/cip1852-first-address",
]

[workspace.metadata.release]
shared-version = false
tag = true
