[workspace]
members = [
    "blockchain-source",
    "cardano-utils",
    "core",
    "deps",
    "fraos",
    "indexed-log-map",
    "multiverse",
    "utxo-selection",
    "cardano-cli-tools/cip1852-first-address",
    "cardano-cli-tools/oura-block-fetcher",
    "cardano-cli-tools/cardano-net-fetcher",
]

[workspace.metadata.release]
shared-version = false
tag = true
