[workspace]
members = [
    "blockchain-source",
    "core",
    "deps",
    "fraos",
    "indexed-log-map",
    "multiverse",
    "cardano-cli-tools/oura-block-fetcher",
    "cardano-cli-tools/cardano-net-fetcher",
]
exclude = [
    "cardano-cli-tools/cip1852-first-address",
    "utxo-selection",
    "cardano-utils",
]


[workspace.metadata.release]
shared-version = false
tag = true
