[package]
name = "dcspark-blockchain-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deps = { version = "0.1.0", path = "../deps" }
dcspark-core = { version = "0.1.0", path = "../core" }

anyhow = { version = "1" }
async-trait = { version = "0.1.57" }
thiserror = { version = "1.0" }
