[package]
name = "dcspark-blockchain-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deps = { version = "0.1.0", path = "../deps" }
dcspark-core = { version = "0.1.0", path = "../core" }
multiverse = { path = "../multiverse" }

anyhow = { version = "1" }
async-trait = { version = "0.1.57" }
serde = { version = "1.0.144" }
thiserror = { version = "1.0" }

cardano-net = "0.2.1"
cardano-sdk = "0.2.4"
tokio = { version = "1", features = [ "full" ] }
tracing = { version = "0.1" }
cbored = "0.3.3"
