[package]
name = "dcspark-blockchain-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deps = { version = "0.1.0", path = "../deps" }
dcspark-core = { version = "0.1.0", path = "../core" }
multiverse = { path = "../multiverse" }

anyhow = { version = "1" }
async-trait = { version = "0.1.57" }

cardano-net = { version = "0.2.1" }
cardano-sdk = { version = "0.2.4" }
cbored = { version = "0.3.3" }
cbored-derive = { version = "0.3.1" }
cryptoxide = { version = "0.4.2" }
hex = { version = "0.4.3" }
serde = { version = "1.0.144" }
tokio = { version = "1", features = [ "full" ] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
