[package]
name = "dcspark-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deps = { version = "0.1.0", path = "../deps" }

anyhow = { version = "1.0" }
bech32 = { version = "0.9" }
cryptoxide = {version = "0.4.2" }
hex = { version = "0.4" }
serde = { version = "1.0.144", features = ["derive", "rc" ] }
thiserror = { version = "1.0" }
async-trait = { version = "0.1.57" }

[dev-dependencies]
smoke = { version = "0.3" }
smoke-macros = { version = '0.1'}
clap = { version = "3.2", features = [ "derive", "env" ] }
quickcheck = { version = "1" }
serde_json = "1.0"
