[package]
name = "multiverse-source"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
shared-version = true
tag = false

[dependencies]
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = { version = "1.0" }
sled = { version = "0.34" }
thiserror = { version = "1.0" }
anyhow = { version = "1" }
tracing = { version = "0.1" }
async-trait = { version = "0.1.58" }
dcspark-core = { version = "0.1.0", path = "../core" }
multiverse = { path = "../multiverse" }
dcspark-blockchain-source = { path = "../blockchain-source" }

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
