[package]
name = "multiverse"
version = "0.1.0"
edition = "2021"
authors = [ "nicolas@primetype.co.uk" ]
description = "Managing multiple state branches accross a potentially diverging and conflicting timeline"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcSpark/multiverse-rs"
documentation = "https://docs.rs/multiverse"

[features]

[dependencies]
deps = { version = "0.1.0", path = "../deps" }
core = { version = "0.1.0", path = "../core" }

serde = { version = "1.0.144" }
sled = { version = "0.34"}
thiserror = "1.0"
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = "1.0"
smoke = { version = "0.3" }
smoke-macros = { version = '0.1'}