[package]
name = "utxo-selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deps = { version = "0.1.0", path = "../deps" }
dcspark-core = { version = "0.1.0", path = "../core" }
cardano-utils = { version = "0.1.0", path = "../cardano-utils" }

anyhow = {version = "1.0"}
cardano-multiplatform-lib = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "7e930347d665b05875b7e2974be2f49e8cbe2a12" }
hex = { version = "0.4" }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive", "rc" ] }

tokio = { version = "1.16.1", features = ["full"] }
clap = { version = "3.1", features = ["derive"] }
