[package]
name = "cardano-net-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcspark-core = { path = "../../core" }
dcspark-blockchain-source = { path = "../../blockchain-source" }

anyhow = { version = "1.0.71" }
clap = { version = "4.3.0", features = ["derive"] }
hex = { version = "0.4.3" }
tokio = { version = "1.25.0", features = ["full"] }