[package]
name = "cip1852-first-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cardano-multiplatform-lib = { git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "7e930347d665b05875b7e2974be2f49e8cbe2a12" }
hex = "0.4.3"
miniserde = "0.1.27"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_derive = "1.0.149"
structopt = "0.3.26"
